Melhorias diversas nos comandos de party